<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_blue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_bottom_space"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginLeft="@dimen/margin_space"
                android:textAlignment="center"
                android:textSize="@dimen/title_font_size"
                android:text="@string/main_title"
                />

            <Button
                android:id="@+id/spotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_bottom_space"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginLeft="@dimen/margin_space"
                android:text="@string/spotify"
                android:background="@color/orange"/>

            <Button
                android:id="@+id/scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_bottom_space"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginLeft="@dimen/margin_space"
                android:text="@string/scores"
                android:background="@color/orange"/>

            <Button
                android:id="@+id/library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_bottom_space"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginLeft="@dimen/margin_space"
                android:text="@string/library"
                android:background="@color/orange"/>

            <Button
                android:id="@+id/build_bigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_bottom_space"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginLeft="@dimen/margin_space"
                android:text="@string/build_bigger"
                android:background="@color/orange"/>

            <Button
                android:id="@+id/xyz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_bottom_space"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginLeft="@dimen/margin_space"
                android:text="@string/xyz_reader"
                android:background="@color/orange"/>

            <Button
                android:id="@+id/capstone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_bottom_space"
                android:layout_marginRight="@dimen/margin_space"
                android:layout_marginLeft="@dimen/margin_space"
                android:text="@string/capstone"
                android:textColor="@color/white"
                android:background="@color/red"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
